--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,17 @@
 {
   "env": {
      "es6": true,
-     "node": true
+     "node": true,
+     "jasmine": true
   },
-  parserOptions: {
-    ecmaVersion: 6,
-    ecmaFeatures: {
-      jsx: true
+  "globals": {
+    "Phaser": true
+  },
+  "plugins": ["jasmine"],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+      "jsx": true
     }
   },
   "rules": {
@@ -52,5 +57,5 @@
     "no-use-before-define": 2,
     "no-var": 2
   },
-  "extends": ["standard"]
+  "extends": ["standard", "plugin:jasmine/recommended"]
 }
