--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "collabogram",
+  "name": "phaser-sandbox",
   "version": "0.0.1",
-  "description": "A collaborative game to increase team productivity",
-  "main": "index.js",
+  "description": "A Phaser sandbox for building web games.",
+  "main": "./src/app.js",
   "dependencies": {
     "phaser-ce": "^2.8.3",
     "webfontloader": "^1.6.28"
@@ -19,10 +19,16 @@
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jasmine": "^2.8.4",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "expose-loader": "^0.7.3",
+    "jasmine-core": "^2.7.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-webpack": "^2.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
@@ -30,7 +36,8 @@
   },
   "scripts": {
     "dev": "webpack",
-    "deploy": "webpack --config webpack.production.config.js"
+    "deploy": "webpack --config webpack.production.config.js",
+    "test": "eslint ./src/**/**.js"
   },
   "repository": {
     "type": "git",
